--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,13 +11,7 @@ body {
   }
 }
 .heroGradient {
-  background: linear-gradient(
-    90deg,
-    #1046f98a,
-    #61ffd0b4 35%,
-    #f9799fc1 74%,
-    #fec388
-  );
+  background: radial-gradient(circle,rgba(218, 240, 227, 1) 6%, rgba(207, 229, 250, 1) 100%);
   transform: translateZ(100);
   will-change: transform;
   border-radius: 50%;
